[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gaussianblur"
version = "1.1.2"
authors = [
  { name="Michele Renzullo", email="renzullo@pm.me" },
]
description = "A Python package to apply a super fast Gaussian blur through Fast Fourier Transform"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: C++",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Image Processing",
]
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["gaussian blur", "blur", "tiles", "image processing", "convolution", "fast fourier transform", "FFT", "python", "bindings", "C++", "scientific", "engineering"]

[project.urls]
Homepage = "https://github.com/michelerenzullo/LibGaussianBlur"
Issues = "https://github.com/michelerenzullo/LibGaussianBlur/issues"